@@ -4,6 +4,9 @@ Noteworthy changes in version 2.5.5 (unreleased)
   * gpg: Fix a verification DoS due to a malicious subkey in the
     keyring.  [T7527]
 
+  * GPGME is not any more distributed with the Windows installer.
+    Please install gpg4win to get gpgme version.
+
   See-also: gnupg-announce/2025q1/000xxx.html
   Release-info: https://dev.gnupg.org/T7530
 
